# ThorsNisse

./: .gitignore  .gitmodules  .travis.yml  LICENSE  LibConfig.h.in  Makefile.config.in  Makefile.config.local  Makefile.config.local.in  Makefile.extra.am  Makefile.extra.in  Notes  README.md  config.h.in  configure  configure.ac
doc/: Building_A_Module.md  Building_A_Server.md  Doxyfile  api.md  server.md  usage.md
doc/api/: overview.md  server.md
doc/interface/: handler.md  server.md
docSource/: X.diff  X.new  X.orig  _version  config.json  t1
docSource/source/class/: ThorsNisseCoreService.Handler.HandlerBase.md  ThorsNisseCoreService.Handler.HandlerNonSuspendable.md  ThorsNisseCoreService.Handler.HandlerStream.md  ThorsNisseCoreService.Handler.HandlerSuspendable.md  ThorsNisseCoreService.Handler.HandlerSuspendableWithStream.md  ThorsNisseCoreService.Server.Server.md  ThorsNisseCoreService.Server.ServerConnection.md  ThorsNisseCoreService.ServerHandler.ServerHandler.md  ThorsNisseCoreService.ServerHandler.TimerHandler.md  ThorsNisseCoreSocket.Socket.BaseSocket.md  ThorsNisseCoreSocket.Socket.ConnectSocket.md  ThorsNisseCoreSocket.Socket.DataSocket.md  ThorsNisseCoreSocket.Socket.ServerSocket.md  ThorsNisseCoreSocket.SocketStream.ISocketStream.md  ThorsNisseCoreSocket.SocketStream.OSocketStream.md  ThorsNisseCoreSocket.SocketStream.SocketStreamBuffer.md  ThorsNisseProtocolHTTP.Binder.Binder.md  ThorsNisseProtocolHTTP.Binder.Site.md  ThorsNisseProtocolHTTP.DeveloperHandler.DeveloperHandler.md  ThorsNisseProtocolHTTP.DynamicSiteLoader.DynamicSiteLoader.md  core.service.HandlerBase.md  (+18 more)
docs/: index.html
src/: Makefile
src/AddBeer/: AddBeer.cpp  Makefile
src/Core/: Makefile
src/Example/: Makefile
src/Express/: Makefile  all.h
src/Imp/: Makefile  ProtocolSimple.cpp  ProtocolSimple.h  ProtocolSimpleStream.cpp  ProtocolSimpleStream.h
src/Nisse/: .gitignore  CoRoutine.h  HttpBinder.cpp  HttpBinder.h  HttpTypes.h  Makefile  Nisse.cpp  NisseHandler.cpp  NisseHandler.h  NisseHandler.tpp  NisseService.cpp  NisseService.h  NisseService.tpp  ProtocolHTTPBinder.cpp  ProtocolHTTPBinder.h  ProtocolHTTPNisse.cpp  ProtocolHTTPNisse.h  ProtocolHTTPTypes.cpp  ProtocolHTTPTypes.h  ProtocolSimpleNisse.cpp  ProtocolSimpleNisse.h  ProtocolSimpleStreamNisse.cpp  ProtocolSimpleStreamNisse.h  http_parser.h
src/NisseSQL/: ConnectionNonBlocking.cpp  ConnectionNonBlocking.h  Makefile  NonBlockingMySQLConnection.cpp  NonBlockingMySQLConnection.h  NonBlockingPrepareStatement.cpp  NonBlockingPrepareStatement.h
src/NodeCXX/: Makefile  NodeCXX.cpp
src/Protocol/: Makefile
src/Socket/: .gitignore  Makefile  ProtocolSimple.cpp  ProtocolSimple.h  Socket.cpp  Socket.h  Socket.tpp  SocketStream.cpp  SocketStream.h  Utility.h
src/Troll/: Binder.cpp  Binder.h  HTTPProtocol.cpp  HTTPProtocol.h  HttpScanner.cpp  HttpScanner.h  Makefile  Route.cpp  Route.h  Types.cpp  Types.h  http_parser.cpp
(+297 files in other folders)
